--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
   - mix deps.get --only docs
   - MIX_ENV=docs mix inch.report
+cache:
+  directories:
+    - _build
+    - deps
